[gd_scene load_steps=10 format=3 uid="uid://b1ele5lo5n6u1"]

[ext_resource type="Script" path="res://scene/world_updater/WorldUpdater.gd" id="1_kjpk4"]
[ext_resource type="Script" path="res://scene/world_updater/StateGetter.gd" id="2_bi80l"]
[ext_resource type="Script" path="res://scene/world_updater/Ticker.gd" id="3_xkju4"]
[ext_resource type="Script" path="res://scene/world_updater/SceneRecreator.gd" id="4_ep45b"]
[ext_resource type="PackedScene" uid="uid://8erhc5r3ryln" path="res://scene/world_updater/entity_deserializer.tscn" id="4_ho1sd"]
[ext_resource type="Script" path="res://scene/world_updater/DeltasApplier.gd" id="5_iqoum"]
[ext_resource type="Script" path="res://scene/world_updater/TileSetter.gd" id="5_u74nd"]
[ext_resource type="Script" path="res://scene/world_updater/AgentCreator.gd" id="8_k6pu8"]
[ext_resource type="Script" path="res://scene/world_updater/ActionQueue.gd" id="9_pp2nj"]

[node name="WorldUpdater" type="Node"]
script = ExtResource("1_kjpk4")

[node name="StateGetter" type="Node" parent="."]
script = ExtResource("2_bi80l")

[node name="GetStateHTTPRequest" type="HTTPRequest" parent="StateGetter"]

[node name="@@24309" type="Timer" parent="StateGetter/GetStateHTTPRequest"]
one_shot = true

[node name="GetStateTimer" type="Timer" parent="StateGetter"]
autostart = true

[node name="SceneRecreator" type="Node" parent="StateGetter"]
script = ExtResource("4_ep45b")

[node name="TileSetter" type="Node" parent="StateGetter/SceneRecreator"]
script = ExtResource("5_u74nd")

[node name="DeltasApplier" type="Node" parent="StateGetter"]
script = ExtResource("5_iqoum")

[node name="EntityDeserializer" parent="StateGetter" node_paths=PackedStringArray("tile_setter") instance=ExtResource("4_ho1sd")]
tile_setter = NodePath("../SceneRecreator/TileSetter")

[node name="Ticker" type="Node" parent="."]
script = ExtResource("3_xkju4")

[node name="PostTickTimer" type="Timer" parent="Ticker"]
autostart = true

[node name="PostTickHTTPRequest" type="HTTPRequest" parent="Ticker"]

[node name="AgentCreator" type="Node" parent="."]
script = ExtResource("8_k6pu8")

[node name="PostAgentHTTPRequest" type="HTTPRequest" parent="AgentCreator"]

[node name="ActionQueue" type="Node" parent="."]
script = ExtResource("9_pp2nj")

[connection signal="request_completed" from="StateGetter/GetStateHTTPRequest" to="StateGetter" method="_on_get_state_http_request_request_completed"]
[connection signal="timeout" from="StateGetter/GetStateTimer" to="StateGetter" method="_on_get_state_timer_timeout"]
[connection signal="timeout" from="Ticker/PostTickTimer" to="Ticker" method="_on_post_tick_timer_timeout"]
